added section about

--- a/index.html
+++ b/index.html
@@ -27,8 +27,30 @@
                     <h1 class="discount">65% OFF</h1></div>
                     <h4 class="holiday">OUR HOLIDAY DEALS ARE BETTER</h4>
                     <h2 class="category">ALL CATEGORIES</h2>
-                    <div class="holiday-offer"><img src=""></div>
+                    <div class="holiday-offer"><img src="resources/New Year Photo.png"></div>
                 
+            </div>
+        </section>
+        <section class="sec">
+            <div class="total-item">
+                <div class="image-item">
+                   <div class="item-position"> <h2 class="welcome-title">Welcome to<br> midnight party </h2>
+                    <h4 class="welcome-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </h4>
+                    <button href="" class="btn">JOIN NOW</button>
+                </div>
+                <div  class="new-year">
+                    <img src="resources/Group 70.png">
+                </div>
+                </div>
+                
+            </div>
+        </section>
+        <section>
+            <div class="function-item">
+                <h2 class="place-item"><span class="text-primary">Place:</span>New Park Hoter</h2>
+                <h2 class="date-item"><span class="text-primary">Date:</span>31 December Night 2023</h2>
+                <h2 class="time-item"><span class="text-primary">Time: </span>Evening 7:30 Pm To 12.30 Am</h2>
+                <button class="btn-primary">Join Now</button>
             </div>
         </section>
 
