added third commit

--- a/index.html
+++ b/index.html
@@ -47,13 +47,25 @@
         </section>
         <section>
             <div class="function-item">
-                <h2 class="place-item"><span class="text-primary">Place:</span>New Park Hoter</h2>
+                <h2 class="place-item"><span class="text-primary">Place:</span>New Park Hotel</h2>
                 <h2 class="date-item"><span class="text-primary">Date:</span>31 December Night 2023</h2>
                 <h2 class="time-item"><span class="text-primary">Time: </span>Evening 7:30 Pm To 12.30 Am</h2>
                 <button class="btn-primary">Join Now</button>
             </div>
         </section>
-
+        <section>
+            <div class="offer-item-title">
+                <div class="new-best">
+                <h4 class="best">NEW BEST OFFER</h4>
+                <h1 class="soon">Comming Soon</h1>
+                <h5 class="dolor1">Dolor sit amet consectetur. Consequat eget<br> consectetur maecenas sed molestie <br>malesuada. Ipsum sed sodales risus ut <br>pellentesque vel euismod. </h5></div>
+                <div class="new-best"><img src="resources/Ellipse 1.png"></div>
+                <div class="new-best"><h2 class="new-description-item">2024</h2>
+                <h5 class="dolor">Dolor sit amet consectetur.<br> Consequat eget consectetur maecenas sed.</h5>
+               <div class="last-img"> <img src="resources/Group 96.png"></div>
+            </div>
+            </div>
+        </section>
     </main>
     <footer>
 
