--- a/index.html
+++ b/index.html
@@ -59,13 +59,28 @@
                 <h4 class="best">NEW BEST OFFER</h4>
                 <h1 class="soon">Comming Soon</h1>
                 <h5 class="dolor1">Dolor sit amet consectetur. Consequat eget<br> consectetur maecenas sed molestie <br>malesuada. Ipsum sed sodales risus ut <br>pellentesque vel euismod. </h5></div>
-                <div class="new-best"><img src="resources/Ellipse 1.png"></div>
+                <div class="new-best"><img class="edit" src="resources/Ellipse 1.png"></div>
                 <div class="new-best"><h2 class="new-description-item">2024</h2>
                 <h5 class="dolor">Dolor sit amet consectetur.<br> Consequat eget consectetur maecenas sed.</h5>
                <div class="last-img"> <img src="resources/Group 96.png"></div>
             </div>
             </div>
         </section>
+<div>
+        <section>
+            <div class="new-holiday">
+                <h4>WHAT IS FUCNCTIONAL</h4>
+                <h1 class="item-holiday"><span class="sale-holiday">Holidays</span> Sale 50%</h1>
+                <h5>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</h5>
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                    <div><img src="" alt=""></div>
+
+            </div>
+        </section>
+        </div>
     </main>
     <footer>
 
