added check commit

--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
         </section>
 <div>
         <section>
+            
             <div class="new-holiday">
                 <h4>WHAT IS FUCNCTIONAL</h4>
                 <h1 class="item-holiday"><span class="sale-holiday">Holidays</span> Sale 50%</h1>
                 <h5>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>
                     molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id<br> fermentum amet amet sit consectetur.</h5>
+                    </div>
                    <div class="recten">
                     
                     <div class="holiday-box">
@@ -116,7 +118,7 @@
     </main>
     <footer>
         <section class="foot-last">
-       <div>
+       <div class="check">
         <div class="foot-head">
         <h4 class="foot-title"> 44, Big Building Roosevelt Street<br>
             Beach Gardens Florida 33410</h4>
